--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-08-09  Tim Waugh  <twaugh@redhat.com>
 
+	* src/access_ppdev.c (set_mode): Implement F1284_FASTEPP.
+	* include/ieee1284.h (enum ieee1284_transfer_flags): New flag
+	F1284_FASTEPP.
+
 	* src/default.c (poll_port): New internal function for very short
 	waits (for EPP).
 	(default_epp_write_data): Implemented.
