2002-08-24  Tim Waugh  <twaugh@redhat.com>
        * src/ports.c (sort_ports): Sort the port list in name order.
        (add_port): Keep the list sorted, for minimal surprise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-24  Tim Waugh  <twaugh@redhat.com>
+
+	* src/ports.c (sort_ports): Sort the port list in name order.
+	(add_port): Keep the list sorted, for minimal surprise.
+
 2002-08-09  Tim Waugh  <twaugh@redhat.com>
 
 	* src/access_ppdev.c (set_mode): Implement F1284_FASTEPP.
