2002-08-24  Tim Waugh  <twaugh@redhat.com>
        * Makefile.am: Rename test libieee1284_test, and ship it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 2002-08-24  Tim Waugh  <twaugh@redhat.com>
 
+	* Makefile.am: Rename test libieee1284_test, and ship it.
+
 	* src/ports.c (sort_ports): Sort the port list in name order.
 	(add_port): Keep the list sorted, for minimal surprise.
 
