--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-27  Tim Waugh  <twaugh@redhat.com>
+
+	* src/default.c: More debugging output.
+	* src/access_ppdev.c: More debugging output.  Handle O_NONBLOCK
+	properly.
+
 2002-08-24  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.1 (stable).
