--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-29  Tim Waugh  <twaugh@redhat.com>
+
+	* src/conf.c, src/conf.h: New files, for configuration.
+	* src/ports.c: Call read_config_file().
+	* src/state.c: Use disallow_ppdev from config.
+	* Makefile.am: Update.
+
 2002-08-27  Tim Waugh  <twaugh@redhat.com>
 
 	* src/default.c: More debugging output.
