--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-08-29  Tim Waugh  <twaugh@redhat.com>
 
+	* doc/interface.xml (libieee1284.3): Added a configuration section.
+
 	* src/conf.c, src/conf.h: New files, for configuration.
 	* src/ports.c: Call read_config_file().
 	* src/state.c: Use disallow_ppdev from config.
