--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-30  Tim Waugh  <twaugh@redhat.com>
+
+	* src/conf.c: Don't look in $HOME for config file.
+	* doc/interface.xml: Updated.
+
 2002-08-29  Tim Waugh  <twaugh@redhat.com>
 
 	* doc/interface.xml (libieee1284.3): Added a configuration section.
