--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-02  Tim Waugh  <twaugh@redhat.com>
+
+	* src/conf.c: Add 'method' keyword to 'disallow', since there are
+	others things than methods that will be useful there too.
+	* doc/interface.xml: Updated.
+
 2002-08-30  Tim Waugh  <twaugh@redhat.com>
 
 	* src/default.c (default_epp_write_data): Don't deassert nWrite
