--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-04  Tim Waugh  <twaugh@redhat.com>
+
+	* src/debug.h: Add a format attribute to dprintf, for GCC.
+
 2002-09-04  Matthew Duggan  <stauff1@users.sourceforge.net>
 
 	* src/detect.h: Added Phase enumerated type, and variable in
