--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-04  Tim Waugh  <twaugh@redhat.com>
 
+	* doc/interface.xml (ieee1284_get_irq_fd): Clarify the conditions
+	of use of the file descriptor.
+
 	* src/debug.h: Add a format attribute to dprintf, for GCC.
 
 2002-09-04  Matthew Duggan  <stauff1@users.sourceforge.net>
