--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-05  Tim Waugh  <twaugh@redhat.com>
 
+	* src/detect.c (check_dev_node): If claiming a ppdev device node
+	fails, don't worry about it.  It might be available to claim by the
+	time the user asks for it.
+
 	* include/ieee1284.h: Added ieee1284_clear_irq.
 	* src/detect.h (struct parport_access_methods): Added clear_irq
 	method declaration.
