--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-07  Tim Waugh  <twaugh@redhat.com>
+
+	* configure.in, Makefile.am: Version 0.2.2 (stable).
+
 2002-09-05  Tim Waugh  <twaugh@redhat.com>
 
 	* src/detect.c (check_dev_node): If claiming a ppdev device node
