--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-09-07  Matthew Duggan  <stauff1@users.sourceforge.net>
+
+	* src/access_lpt.c (init): Set capabilities to indicate that
+	bidirectional transfers are not possible.
+	(read_data, data_dir): Removed.
+	(write_control, frob_control): Don't use data_dir.
+	(lpt_access_methods): Updated.
+	* src/interface.c (ieee1284_read_data): Check that read_data
+	method is provided and return E1284_NOTAVAIL if not.
+	(ieee1284_data_dir): Likewise for data_dir.
+
 2002-09-07  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.2 (stable).
