--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-09  Tim Waugh  <twaugh@redhat.com>
+
+	* src/blockio.c: Removed.
+
 2002-09-07  Matthew Duggan  <stauff1@users.sourceforge.net>
 
 	* src/access_lpt.c (init): Set capabilities to indicate that
