--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-09  Tim Waugh  <twaugh@redhat.com>
 
+	* doc/interface.xml: Clarifications about E1284_INVALIDPORT, and
+	about the constraints on the port supplied to each function.
+
 	* src/access_ppdev.c, src/conf.c, src/debug.c: Just formatting
 	changes.
 
