--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-17  Tim Waugh  <twaugh@redhat.com>
+
+	* Makefile.am: Ship src/par_nt.h, README.* (oops).
+
 2002-09-15  Matthew Duggan  <stauff1@users.sourceforge.net>
 
 	* configure.in: Added check for FreeBSD/i386
