--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-30  Tim Waugh  <twaugh@redhat.com>
+
+	* solaris_io/Makefile.in: Move to..
+	* Makefile.am, configure.in: ..here.
+
 2002-09-26  Julien BLACHE  <jblache@debian.org>
 
 	* configure.in: Test for sys/io.h.
