2002-10-12  Julien BLACHE  <jblache@debian.org>
        * src/access_io.c, src/detect.h: Prevent conflicts with inb/outb
        macros.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-12  Julien BLACHE  <jblache@debian.org
+
+	* src/access_io.c, src/detect.h: Prevent conflicts with inb/outb
+	macros.
+
 2002-10-02  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile.am: Fix solaris_io/iop link rule.
