--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-12  Tim Waugh  <twaugh@redhat.com>
+
+	* configure.in, Makefile.am: Version 0.2.4 (stable).
+
 2002-10-12  Julien BLACHE  <jblache@debian.org>
 
 	* src/access_io.c, src/detect.h: Prevent conflicts with inb/outb
