--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.2.4 (stable)
+
+	Minor bugfixes.
+
 0.2.3 (stable)
 
 	This release contains files that were accidentally missing from
