--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-05  Matthew Duggan <stauff1@users.sourceforge.net>
+
+       * Makefile.am: Ship src/io.h (double oops).
+
 2002-10-12  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.4 (stable).
