--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-05  Matthew Duggan <stauff1@users.sourceforge.net>
+
+       * src/access_ppdev.c (negotiate): Check errno after ioctl fails, 
+       not return value.
+       * doc/interface.xml: negotiate can also return E1285_SYS in rare cases.
+
 2002-11-05  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.5 (stable).
