--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 libieee1284 news
 ----------------
 
+0.2.6 (stable)
+
+	Minor bugfixes.
+
+0.2.5 (stable)
+
+	Minor bugfixes.
+
 0.2.4 (stable)
 
 	Minor bugfixes.
