--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-22  Tim Waugh  <twaugh@redhat.com>
+
+	* src/default.c (default_ecp_write_addr): Implemented by Gretus
+	Hoogestraat <gretus@nine11.de>.
+
 2003-02-21  Tim Waugh  <twaugh@redhat.com>
 
 	* src/*.c, src/debug.h: Rename dprintf to debugprintf to avoid
