--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-26  Tim Waugh  <twaugh@redhat.com>
+
+	* configue.in, Makefile.am: Version 0.2.7 (stable).
+
 2003-02-22  Tim Waugh  <twaugh@redhat.com>
 
 	* src/default.c (default_ecp_write_data): Don't drop strobe too
