--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ libieee1284 news
 
 0.2.7 (stable)
 
-	Fallback implementation for ECP address transfers.
+	This release adds a fallback implementation for ECP address transfers.
 
 0.2.6 (stable)
 
