--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-09  Tim Waugh  <twaugh@redhat.com>
+
+	* src/access_ppdev.c (translate_error_code): Translate EAGAIN to
+	E1284_TIMEDOUT.
+
 2003-05-06  Tim Waugh  <twaugh@redhat.com>
 
 	* include/ieee1284.h: Avoid trailing commas in enums, to prevent
