--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-05-30  Tim Waugh  <twaugh@redhat.com>
+
+	* include/ieee1284.h: New prototypes.
+	* src/interface.c (ieee1284_ref): New function.
+	(ieee1284_unref): New function.
+	* doc/interface.xml: Document them.
+
+	* src/ports.c (deref_port): Return the new reference count.
+	* src/detect.h: Adjust prototype.
+
 2003-05-23  Tim Waugh  <twaugh@redhat.com>
 
 	* doc/interface.xml: Clarify the directory of 'capabilities' in
