2003-05-30  Tim Waugh  <twaugh@redhat.com>
        * configure.in, Makefile.am: Version 0.2.8 (stable).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2003-05-30  Tim Waugh  <twaugh@redhat.com>
 
-	* configure.in, Makefile.am: Version 0.2.8pre1 (pre-test).
+	* configure.in, Makefile.am: Version 0.2.8 (stable).
 
 2003-05-30  Tim Waugh  <twaugh@redhat.com>
 
