--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Tim Waugh  <twaugh@redhat.com>
+
+	* configure.in, Makefile.am: Make Python extension module optional.
+
 2004-02-03  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.9pre1 (pre-test).
