--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-25  Tim Waugh  <twaugh@redhat.com>
 
+	* configure.in: Version 0.2.9pre2 (pre-test).
+
+2004-03-25  Tim Waugh  <twaugh@redhat.com>
+
 	* configure.in, Makefile.am: Make Python extension module optional.
 
 2004-02-03  Tim Waugh  <twaugh@redhat.com>
