--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.2.9 (stable)
+
+	Several small bugs were fixed.  A Python extension module was added.
+
 0.2.8 (stable)
 
 	Several small bugs were fixed, and there were some minor API
