--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Tim Waugh  <twaugh@redhat.com>
+
+	* Makefile.am: Ship VC6 files.
+
 2005-01-20  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in: Version 0.2.9 (stable).
