2005-03-22  Tim Waugh  <twaugh@redhat.com>
        * configure.in: Version 0.2.10 (stable).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2005-03-11  Tim Waugh  <twaugh@redhat.com>
+2005-03-22  Tim Waugh  <twaugh@redhat.com>
 
-	* configure.in: Version 0.2.10pre2 (pre-test).
+	* configure.in: Version 0.2.10 (stable).
 
 2005-03-11  Tim Waugh  <twaugh@redhat.com>
 
@@ -13,10 +13,6 @@
 	* configure.in: Patch from Robin Elfrink <elfrink@introweb.nl> to
 	allow building on Debian GNU/kFreeBSD
 	(http://www.debian.org/ports/kfreebsd-gnu/).
-
-2005-01-21  Tim Waugh  <twaugh@redhat.com>
-
-	* configure.in, Makefile.am: Version 0.2.10pre1 (pre-test).
 
 2005-01-21  Tim Waugh  <twaugh@redhat.com>
 
