--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-31  Tim Waugh  <twaugh@redhat.com>
+
+	* src/detect.c (check_proc_type): Don't require st_nlink > 2 for
+	proc directories.  Patch from Stefan Demharter.
+
 2005-04-06  Tim Waugh  <twaugh@redhat.com>
 
 	* src/ports.c: Applied patch from Julien BLACHE <jblache@debian.org>
