--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-18  Tim Waugh  <twaugh@redhat.com>
+
+	* configure.in: Version 0.2.11 (stable).
+
 2007-08-31  Tim Waugh  <twaugh@redhat.com>
 
 	* src/detect.c (check_proc_type): Don't require st_nlink > 2 for
