--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.2.11 (stable)
+
+	A fix for newer Linux kernels has been applied.
+
 0.2.10 (stable)
 
 	Several small bugs were fixed.  Modifications to support udev-054
