--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-13  Tim Waugh  <twaugh@redhat.com>
+
+	* Applied NetBSD support patch from Jacques Pelletier.
+
 2007-09-18  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in: Version 0.2.11 (stable).
