--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-23  Tim Waugh  <twaugh@redhat.com>
+
+	* src/ports.c: Fixed build.
+
 2009-11-13  Tim Waugh  <twaugh@redhat.com>
 
 	* Applied NetBSD support patch from Jacques Pelletier.
